kubernetes/docs/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: getlock
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
